apps/obsidian/obsidian.yaml
apiVersion: v1
kind: Service
metadata:
  name: obsidian
  namespace: obsidian
spec:
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: obsidian
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: obsidian
  name: obsidian
  namespace: obsidian
spec:
  replicas: 1
  selector:
    matchLabels:
      app: obsidian
  serviceName: obsidian
  template:
    metadata:
      labels:
        app: obsidian
    spec:
      containers:
      - image: lscr.io/linuxserver/obsidian:latest
        name: obsidian
        ports:
        - containerPort: 3000
          name: http
        volumeMounts:
          - name: data
            mountPath: /config
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: obsidian-data-ceph
